2002-07-23  Han-Wen  <hanwen@cs.uu.nl>

	* lily/separation-item.cc (width): cache extent in extent-X

	* lily/spacing-spanner.cc (standard_breakable_column_spacing):
	only add extent for non-musical column.

	* lily/accidental-placement.cc (split_accidentals): new function
	(get_relevant_accidental_extent): new function

	* lily/staff-spacing.cc (next_note_correction): idem

	* lily/separating-group-spanner.cc (find_rods): use conditional_width().

	* scm/sketch.scm: fix roundfilledbox definition

	* lily/lily-guile.cc (robust_list_ref): be sensible with negative
	argument. This fixes too-long stems on half and quarter notes.

2002-07-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/index.texi: Add, fix, change some links and names,
	including dump of wiki wiki.

	* Documentation/GNUmakefile (local-WWW): Slurp wiki.

	* buildscripts/wiki-slurp.py: New file.  Accept multiple pattern.
	(unwiki): Replace local urls with <img src> too.

	* Documentation/GNUmakefile (wiki-dump): New target.

	* Documentation/header.html.in: Link to Documentation/index
	renamed to Index (was other...).

	* Documentation/regression-test.tely: Remove.

	* make/lysdoc-targets.make (local-WWW): Add default targets .ps.gz
	and .pdf.

2002-07-22  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: 1.5.69 released
	
	* lily/accidental-placement.cc (position_accidentals): document
	two bugcases.

	* lily/skyline.cc (skyline_meshing_distance): bugfixes.

2002-07-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/abe.ly: 
	* input/test/transposing.ly: Remove mention of mudela.

	* scripts/lilypond-book.py (make_pixmap): Don't use quiet_system,
	ie, don't redirect PNG output to /dev/null.  Fixes lys-to-tely
	documents.

	* input/test/mark.ly: 
	* Documentation/user/refman.itely: Re-enable \mark #'() example.

	* lily/parser.yy: Revert to MARK scalar.

2002-07-21  Han-Wen  <hanwen@cs.uu.nl>

	* lily/accidental.cc (accurate_boxes): add function to represent